--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,3 +44,14 @@ PasswordResetSent=Password reset link sent to your email.
 PasswordResetSuccess=Password reset successful.
 ExchangeRetrievalFailure=Failed to retrieve exchange data:
 ExchangeRetrievalFailureError=An error occurred while fetching exchange data.
+
+user.creation.subject=Welcome to {0}! Your Wallets Are Ready
+user.login.subject={0} Login Confirmation
+user.update.subject=Profile Update Confirmation
+user.password.reset.subject=Password Change Notification
+user.password.change.subject=Your password has been updated
+user.deletion.subject=Data Erasure Request
+user.account.update.subject=Wallet Update Confirmation
+user.account.transfer.subject={0} Transaction Alert [{1}: {2}]
+
+date.at=at
