--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ ValidEnumList=Values {1} is not a valid list. List must be unique and must not b
 ValidEnum=Value {1} is invalid or does not exist.
 ValidPassword = Password must contain at least 6 letters consisting of one uppercase letter and one special character.
 DebitCreditAccountNotEqual=Debit account must not be equal to credit account : {1}
-CurrencyMismatch=Currency {1} not equal to account''s currency.
+CurrencyMismatchError=Currency {0} not equal to {1} account''s currency.
 ValidAccount = Account id {1} is invalid or does not exist.
 InsufficientBalance = Unauthorised overdraft of {0} {1} not allowed on account {2} with working balance of {0} {3}.
 TokenInvalid = Token is invalid.
